# codex

./: README.md  cheatsheets.sh  cron.md  cz.md  docker.md  econometric_terms.md  fastapi.md  fedora.md  find.md  find_grep.md  git.md  graphql.md  grep.md  linux.md  main.py  py_apis_web.md  py_basics.md  py_data_structures.md  py_environment_setup.md  py_oop.md  py_pandas.md  pyproject.toml  pytest.md  python_apis_web.md  python_basics.md  python_data_structures.md  python_environment_setup.md  python_file_operations.md  python_oop.md  python_pandas.md  r.md  r_basics.md  r_development.md  regex.md  tmux.md  uv.md
cheatsheets/: cz.md  database.md  datawarehousing.md  django.md  docker.md  fastapi.md  fedora.md  find.md  flask.md  git.md  graphql.md  grep.md  linux.md  mongo_db.md  py.md  py_basics.md  py_db.md  py_environment_setup.md  py_file_operations.md  py_jupyter.md  py_misc.md  py_ml_ai.md  py_oop.md  py_pandas.md  r_advanced.md  regex.md  slurm.md  spark.md  sql_advanced.md  tmux.md  tree.md  uv.md  uv_pyproject.md
cheatsheets/cheatsheets/: pytest_mock.md  pytest_monkeypatch.md  sql_to_r.md
cheatsheets/cheatsheets/api/: python_api.md
cheatsheets/cheatsheets/databases/: from_sql_to_mongo.md  mongo.md  python_sqlite3_band_db.md
cheatsheets/cheatsheets/git/: branch.md  init_and_add.md  sha1.md
cheatsheets/cheatsheets/oop/: Explain benefits of OOP for given functions. Show applied examples for each.md  OOP.md
cheatsheets/cheatsheets/printed/: WSGI.md  django_stack.md  docker_2.md  docker_bashrc.md  docker_basics.md  dunder.md  (+9 more)
src/cheatsheets/: app.py
(+2 files in other folders)
