[project]
name = "cheatsheets"
version = "0.1.0"
description = "Python-based cheatsheet manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=3.5.0",
]

# define entry point
[project.scripts]
cheatsheets = "cheatsheets.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling where to find the package
[tool.hatch.build.targets.wheel]
packages = ["src/cheatsheets"]
